kuberenetes/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: codegen
  namespace: codegen-ns

spec:
  rules:
  - host: codegen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codegen
            port:
              number: 8080
  - host: codegenweb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codegenweb
            port:
              number: 3000
